--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -48,7 +48,7 @@ button {
     background-color: rgb(216, 216, 255);
     border: none;
     font-size: 1em;
-    border-radius: 7px;
+    border-radius: 4px;
     padding: 5px 10px;
     margin-top: 3px;
 }
@@ -88,7 +88,8 @@ button {
 /* header.ejs */
 nav {
     display: flex;
-    background-color: rgb(227, 255, 238);
+    background-color: rgb(72, 60, 121);
+    height: 40px;
 }
 nav .content {
     display: flex;
@@ -97,16 +98,21 @@ nav .content {
     width: 60em;
     max-width: 90%;
     margin: 0 auto;
-    border-bottom: 1px solid gray;
+}
+nav h1 a {
+    color: white;
 }
 nav .links {
     margin-left: auto;
 }
 nav .links a {
-    margin-left: 2em;
+    color: white;
+    border-left: 1px solid rgb(136, 136, 136);
+    padding: 0 12px;
+    font-size: 15px;
 }
 nav .links a:hover {
-    border-bottom: 1px solid gray;
+    color: rgb(255, 159, 95);
 }
 
 
@@ -186,8 +192,8 @@ nav .links a:hover {
 }
 .popup-form.create-form-form {
     height: 350px;
-    justify-content: left;
-    display: block;
+    justify-content: center;
+    align-items: center;
 }
 .home-page img {
     width: 300px;
@@ -203,7 +209,7 @@ nav .links a:hover {
     padding-bottom: 100px;
 }
 .home-page .collections a {
-    background-color: rgb(228, 228, 228);
+    background-color: #98A6D4;
     margin: 5px;
     width: 120px;
     height: 100px;
@@ -213,7 +219,6 @@ nav .links a:hover {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
-    border: 1px solid red;
 }
 .home-page p {
     margin-right: auto;
@@ -247,8 +252,21 @@ nav .links a:hover {
 }
 .home-page .con-2 p {
     height: fit-content;
-    margin-bottom: 0;
+    margin-top: 20px;
+    margin-top: 0;
 }
 .home-page .con-2 .forms {
-    margin-top: 0;
+    padding-top: 10px;
+}
+.home-page .form-list-item {
+    border: 1px solid rgb(217, 217, 217);
+    border-radius: 4px;
+    margin-bottom: 5px;
+    margin-left: 10px;
+    margin-right: 10px;
+    box-sizing: border-box;
+    padding: 5px;
+}
+.home-page .form-list-item:hover {
+    background-color: rgb(224, 223, 255);
 }
