--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -1,3 +1,7 @@
+
+@import url('https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@300&display=swap');
+
+
 html {
     height: 100%;
 }
@@ -8,7 +12,7 @@ body {
     margin: 0;
     padding: 0;
     width: 100%;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: 'M PLUS Rounded 1c', sans-serif;
     background-color: rgb(246, 246, 246);
 }
 a {
@@ -20,6 +24,9 @@ button {
     border-radius: 5px;
     padding: 10px 0;
     cursor: pointer;
+}
+input:focus {
+    outline: none;
 }
 .page-container {
     display: block;
@@ -150,6 +157,45 @@ nav .links a:hover {
     height: 200px;
 }
 
+
+
+/* login.ejs */
+.login-page form {
+    background-color: white;
+    width: 400px;
+    margin: 70px auto;
+    border-radius: 4px;
+    box-shadow: gray 6px 6px 12px;
+    padding: 10px 0px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 350px;
+}
+.login-page form input[type=email],
+.login-page form input[type=password] {
+    margin-bottom: 25px;
+    font-size: 15px;
+    border: none;
+    border-bottom: 1px solid gray;
+    width: 200px;
+    padding: 5px 20px;
+}
+.login-page form p {
+    font-size: 13px;
+}
+.login-page form input[type=submit] {
+    margin-top: 15px;
+    width: 200px;
+    padding: 7px 20px;
+    background-color: rgb(255, 141, 99);
+    border: none;
+    border-radius: 4px;
+    color: white;
+}
+.login-page form input::placeholder {
+    color: rgb(175, 175, 175);
+}
 
 /* home.ejs */
 .home-page .con-1 {
