--- a/src/views/form/form.ejs
+++ b/src/views/form/form.ejs
@@ -10,6 +10,7 @@
 
         <div class="table">
 
+
             <table>
 
                 <tr>
@@ -21,6 +22,7 @@
                 </tr>
 
             </table>
+            <button onclick="addEntryRow(event)">+ New Entry</button>
 
         </div>
 
