--- a/src/views/main/login.ejs
+++ b/src/views/main/login.ejs
@@ -1,18 +1,18 @@
 <%- include('../partials/header.ejs') %>
 
-    <div class="login-page">
+    <div class="page-container login-page">
         <div class="content">
-            <h1>Hello Again!</h1>
-
             <form action="/user/login" method="POST">
 
+                <h3>Login</h3>
+
                 <div>
-                    <label for="email">Email</label><br>
-                    <input type="email" name="email" required>
+                    <p>Email</p>
+                    <input type="email" name="email" placeholder="Type your email" required>
                 </div>
                 <div>
-                    <label for="password">Password</label><br>
-                    <input type="password" name="password" required>
+                    <p>Password</p>
+                    <input type="password" name="password" placeholder="Type your password" required>
                 </div>
                 <div class="login-page-button">
                     <input type="submit" value="Login">
