--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -1,7 +1,6 @@
 
 @import url('https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@300&display=swap');
 
-
 html {
     height: 100%;
 }
@@ -27,6 +26,9 @@ button {
 }
 input:focus {
     outline: none;
+}
+input[type=submit] {
+    cursor: pointer;
 }
 .page-container {
     display: block;
@@ -97,6 +99,7 @@ nav {
     display: flex;
     background-color: rgb(72, 60, 121);
     height: 40px;
+    margin-top: 0;
 }
 nav .content {
     display: flex;
@@ -124,6 +127,10 @@ nav .links a:hover {
 
 
 /* index.ejs */
+.landing-page .con-1 {
+    margin-top: 30px;
+
+}
 .content-item {
     display: flex;
     flex-direction: column;
@@ -182,7 +189,7 @@ nav .links a:hover {
     padding: 5px 20px;
 }
 .login-page form p {
-    font-size: 13px;
+    font-size: 15px;
 }
 .login-page form input[type=submit] {
     margin-top: 15px;
@@ -198,6 +205,11 @@ nav .links a:hover {
 }
 
 /* home.ejs */
+.home-page {
+    width: 90%;
+    max-width: 740px;
+    margin: 0 auto;
+}
 .home-page .con-1 {
     width: 100%;
     justify-content: left;
@@ -257,7 +269,7 @@ nav .links a:hover {
 .home-page .collections a {
     background-color: #98A6D4;
     margin: 5px;
-    width: 120px;
+    width: 110px;
     height: 100px;
     border-radius: 2px;
 }
@@ -315,4 +327,33 @@ nav .links a:hover {
 }
 .home-page .form-list-item:hover {
     background-color: rgb(224, 223, 255);
+}
+
+
+/* form.ejs */
+.form-page {
+    background-color: rgb(209, 255, 240);
+    margin: 0 auto;
+    width: 90%;
+    max-width: 740px;
+}
+.form-page .table-container {
+    overflow: scroll;
+}
+.form-page h2 {
+    margin-right: auto;
+    padding-left: 10px;
+}
+.form-page table {
+    background: rgb(219, 222, 255);
+    width: 100%;
+    margin: 10px 5px;
+}
+.form-page table:nth-child(1) {
+    text-align: center;
+    margin: 10px 0px;
+}
+.form-page table td {
+    background-color: white;
+    border-top: 1px solif red;
 }
