--- a/src/views/form/form.ejs
+++ b/src/views/form/form.ejs
@@ -2,37 +2,41 @@
 
     <div class="page-container form-page">
 
-        <form action="/form/update/">
+        <div class="content-container con-1">
+            <h2><%- form.name %></h2>
+            <a href="/form/edit/<%- form._id %>">Edit</a>
+        </div>
 
-            <div class="content-container con-1">
+        <div class="table-container">
 
-                <h2><%- form.name %></h2>
+            <table id="form-table">
     
-            </div>
-    
-            <div class="table-container">
-    
-                <table id="form-table">
-    
-                    <tr class="form-columns" id="form-columns">
-                        <% form.columns.forEach((column) => { %>
-    
-                            <td><%- column %></td>
-    
+                <tr class="form-columns" id="form-columns">
+                    <% form.columns.forEach((column) => { %>
+
+                        <td><%- column %></td>
+
+                    <% }) %>
+                </tr>
+
+                <% form.entries.forEach((entry) => { %>
+
+                    <tr>
+
+                        <% entry.data.forEach((cell) => { %>
+
+                            <td><%- cell %></td>
+
                         <% }) %>
+
                     </tr>
-    
-                </table>
-        
-            </div>
-    
-            <div class="con-2">
-                <button onclick="addNewEntry(event)">+ New Entry</button>
-            </div>
 
-        </form>
+                <% }) %>
 
-    </div>    
+            </table>
 
+        </div>
+
+    </div>
 
 <%- include('../partials/footer.ejs') %>
