Included pdf feature by createing a pdf of a form

--- a/src/views/form/form.ejs
+++ b/src/views/form/form.ejs
@@ -5,6 +5,8 @@
         <div class="content-container con-1">
             <h2><%- form.name %></h2>
             <a href="/form/edit/<%- form._id %>">Edit</a>
+            &nbsp;&nbsp;&nbsp;&nbsp;
+            <a href="/form/pdf/<%- form._id %>">PDF</a>
         </div>
 
         <div class="table-container">
