--- a/src/views/form/editForm.ejs
+++ b/src/views/form/editForm.ejs
@@ -30,7 +30,7 @@
     
                             <% entry.data.forEach((cell) => { %>
     
-                                <td><input type="text" name="existingEntry<%- i %>" value="<%- cell %>"></td>
+                                <td class="editCell"><input type="text" name="existingEntry<%- i %>" value="<%- cell %>"></td>
     
                             <% }) %>
     
