--- a/src/views/form/form.ejs
+++ b/src/views/form/form.ejs
@@ -6,7 +6,7 @@
             <h2><%- form.name %></h2>
             <a href="/form/edit/<%- form._id %>">Edit</a>
             &nbsp;&nbsp;&nbsp;&nbsp;
-            <a href="/form/pdf/<%- form._id %>">PDF</a>
+            <a target="_blank" href="/form/pdf/<%- form._id %>">PDF</a>
         </div>
 
         <div class="table-container">
